--- a/src/BO/BO.csproj
+++ b/src/BO/BO.csproj
@@ -12,7 +12,7 @@
 
  <ItemGroup>
   <PackageReference Include="ITV.AppUtil.NETStandard" Version="9.*" />
-  <PackageReference Include="FluentValidation" Version="11.*" />
+  <PackageReference Include="FluentValidation" Version="12.0.0" />
   <PackageReference Include="Newtonsoft.Json" Version="13.0.*" />
   <PackageReference Include="System.ComponentModel.Annotations" Version="5.0.0" />
  </ItemGroup>
