--- a/src/SamplesRCL/SamplesRCL.csproj
+++ b/src/SamplesRCL/SamplesRCL.csproj
@@ -21,7 +21,7 @@
   <PackageReference Include="Microsoft.AspNetCore.Components" Version="10.0.*-*" />
   <PackageReference Include="Microsoft.AspNetCore.Components.Authorization" Version="10.0.*-*" />
   <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="10.0.*-*" />
-  <PackageReference Include="Microsoft.Data.SqlClient" Version="6.0.1" />
+  <PackageReference Include="Microsoft.Data.SqlClient" Version="6.*" />
   <PackageReference Include="Microsoft.AspNetCore.WebUtilities" Version="10.0.*-*" />
   <PackageReference Include="Microsoft.Extensions.Localization" Version="10.0.*-*" />
   <PackageReference Include="Microsoft.TypeScript.MSBuild" Version="5.*">
