--- a/Test/WebserviceTests/WebserviceTests.csproj
+++ b/Test/WebserviceTests/WebserviceTests.csproj
@@ -31,6 +31,7 @@
   <PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="10.0.*-*" />
   <PackageReference Include="Microsoft.AspNetCore.SignalR.Protocols.MessagePack" Version="10.0.*-*" />
   <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="10.0.*-*" />
+		<PackageReference Include="Swashbuckle.AspNetCore" Version="9.*" />
  </ItemGroup>
 
 </Project>
