Aktuelles deployment Profile

--- a/src/MiracleList_BW/MiracleList_BW.csproj
+++ b/src/MiracleList_BW/MiracleList_BW.csproj
@@ -29,7 +29,7 @@
   <!--für Zeigerprogrammierung erlauben für neue JSinterop seit Blazor WebAssembly 7.0-->
   <AllowUnsafeBlocks>True</AllowUnsafeBlocks>
   <!--Optional für AOT-Kompilierung-->
-  <!--<RunAOTCompilation>true</RunAOTCompilation>-->
+  <RunAOTCompilation>true</RunAOTCompilation>
 
 		<WasmEnableStreamingResponse>false</WasmEnableStreamingResponse> <!--ab .NET 10.0 notwendig, da generierter Proxy noch kein Response Streaming nutzt-->
  </PropertyGroup>
