--- a/src/MiracleList_BU.Client/MiracleList_BU.Client.csproj
+++ b/src/MiracleList_BU.Client/MiracleList_BU.Client.csproj
@@ -11,11 +11,16 @@
  <PropertyGroup>
   <ImplicitUsings>enable</ImplicitUsings>
   <RootNamespace>Web.Client</RootNamespace>
+		<RunAOTCompilation>true</RunAOTCompilation>
+		<PublishTrimmed>true</PublishTrimmed>
+		<InvariantGlobalization>true</InvariantGlobalization>
   <Nullable>enable</Nullable>
   <NoDefaultLaunchSettingsFile>true</NoDefaultLaunchSettingsFile>
   <StaticWebAssetProjectMode>Default</StaticWebAssetProjectMode>
  </PropertyGroup>
- <ItemGroup>
+
+	<!--Eine Datei, die auch in MiracleList_BW verwendet wird-->
+	<ItemGroup>
    <Compile Include="..\MiracleList_BW\Authentication\MLAuthenticationStateProvider3Tier.cs" Link="Authentication\MLAuthenticationStateProvider3Tier.cs" />
  </ItemGroup>
 
@@ -23,7 +28,6 @@
  <ItemGroup>
   <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="10.0.*-*" />
   <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Authentication" Version="10.0.*-*" />
-
  </ItemGroup>
 
  <!--Projektreferenzen-->
