--- a/src/EFCTools/EFCTools.csproj
+++ b/src/EFCTools/EFCTools.csproj
@@ -18,7 +18,7 @@
   <PackageReference Include="Microsoft.Extensions.Configuration" Version="10.0.*-*" />
   <PackageReference Include="Microsoft.Extensions.Configuration.EnvironmentVariables" Version="10.0.*-*" />
   <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="10.0.*-*" />
-  <PackageReference Include="ITV.AppUtil.NETStandard" Version="9.*" />
+  <PackageReference Include="ITVisions.Util" Version="10.*" />
   <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="10.0.*-*" />
 
  </ItemGroup>
