--- a/src/MiracleList_BW/MiracleList_BW.csproj
+++ b/src/MiracleList_BW/MiracleList_BW.csproj
@@ -33,9 +33,9 @@
 		<WasmEnableStreamingResponse>false</WasmEnableStreamingResponse>
 	
 		<!-- Optional für AOT-Kompilierung-->
-		<RunAOTCompilation>true</RunAOTCompilation>
+		<!--<RunAOTCompilation>true</RunAOTCompilation>
 		<PublishTrimmed>true</PublishTrimmed>
-		<InvariantGlobalization>true</InvariantGlobalization>
+		<InvariantGlobalization>true</InvariantGlobalization>-->
  </PropertyGroup>
 
  <!--Optional Multi-Threading-->
