--- a/src/BL/BL.csproj
+++ b/src/BL/BL.csproj
@@ -33,7 +33,7 @@
   <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="10.0.*-*" />
   <PackageReference Include="System.Data.SqlClient" Version="4.*" />
   <PackageReference Include="System.Security.Cryptography.Algorithms" Version="4.*" />
-  <PackageReference Include="Z.EntityFramework.Plus.EFCore" Version="9.*" />
+  <PackageReference Include="Z.EntityFramework.Plus.EFCore" Version="10.105.0" />
  </ItemGroup>
 
  <ItemGroup>
