--- a/src/EFCTools/EFCTools.csproj
+++ b/src/EFCTools/EFCTools.csproj
@@ -8,7 +8,7 @@
  </PropertyGroup>
 
  <ItemGroup>
-		<PackageReference Include="Devart.Data.Oracle.EFCore" Version="10.*" />
+		<!--<PackageReference Include="Devart.Data.Oracle.EFCore" Version="10.*" />-->
   <PackageReference Include="Microsoft.AspNetCore.Cryptography.KeyDerivation" Version="10.0.*-*" />
   <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="10.0.*-*" />
   <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="10.0.*-*">
