--- a/src/MiracleList_BD/appsettings.json
+++ b/src/MiracleList_BD/appsettings.json
@@ -11,6 +11,6 @@
 
  },
  "ConnectionStrings": {
-  "MiracleListDB-Local": "Data Source=E61;Initial Catalog = MiracleList_TEST; Integrated Security = True; Encrypt=False;TrustServerCertificate=True;ApplicationIntent=ReadWrite;MultiSubnetFailover=False;Application Name=EntityFramework;Connection Timeout=2"
+  "MiracleListDB-Local": "Data Source=D120;Initial Catalog = MiracleList_TEST; Integrated Security = True; Encrypt=False;TrustServerCertificate=True;ApplicationIntent=ReadWrite;MultiSubnetFailover=False;Application Name=EntityFramework;Connection Timeout=2"
  }
 }
