--- a/src/MiracleList_BS/appsettings.Development.json
+++ b/src/MiracleList_BS/appsettings.Development.json
@@ -7,6 +7,6 @@
   }
  },
  "ConnectionStrings": {
-  "MiracleListDB-dev": "Data Source=E61;Initial Catalog=MiracleList_Test;Integrated Security=True;Connect Timeout=5;Encrypt=False;TrustServerCertificate=True;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+  "MiracleListDB-dev": "Data Source=D120;Initial Catalog=MiracleList_Test;Integrated Security=True;Connect Timeout=5;Encrypt=False;TrustServerCertificate=True;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
  }
 }
