--- a/src/MiracleList_Backend/appsettings.Development.json
+++ b/src/MiracleList_Backend/appsettings.Development.json
@@ -11,7 +11,7 @@
   }
  },
  "ConnectionStrings": {
-  "MiracleListDB": "Data Source=.;Initial Catalog=MiracleList_Test;Integrated Security=True;Connect Timeout=5;Encrypt=False;TrustServerCertificate=True;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+  "MiracleListDB": "Data Source=D120;Initial Catalog=MiracleList_Test;Integrated Security=True;Connect Timeout=5;Encrypt=False;TrustServerCertificate=True;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
  },
  "EMail": {
   "SMTPServer": "IhrServer.com",
