Kommentare. Einheitliche Dummy-Client-ID

--- a/src/MiracleList_Backend/appsettings.json
+++ b/src/MiracleList_Backend/appsettings.json
@@ -10,7 +10,7 @@
   }
  },
  "ConnectionStrings": {
-  "MiracleListDB": "Data Source=D120;Initial Catalog=MiracleList;Integrated Security=True;Connect Timeout=5;Encrypt=False;TrustServerCertificate=True;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+  "MiracleListDB": "Data Source=D120;Initial Catalog=MiracleList_Test;Integrated Security=True;Connect Timeout=5;Encrypt=False;TrustServerCertificate=True;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
  },
  "EMail": {
   "SMTPServer": "IhrServer.com",
