--- a/src/MiracleList_BW/wwwroot/appsettings.json
+++ b/src/MiracleList_BW/wwwroot/appsettings.json
@@ -3,6 +3,6 @@
   "StagingURL": "https://miraclelistbackend-staging.azurewebsites.net/",
   "LiveURL": "https://miraclelistbackend.azurewebsites.net/",
   "DebugURL": "http://localhost:8889/",
-  "ClientID": "11111111-1111-1111-1111-111111111112"
+  "ClientID": "11111111-1111-1111-1111-111111111111" // bitte eigene Client-ID hier eintragen. Beantragen unter https://miraclelistbackend.azurewebsites.net
  }
 }
