Update Publising Profile

--- a/src/MiracleList_BS/MiracleList_BS.csproj
+++ b/src/MiracleList_BS/MiracleList_BS.csproj
@@ -31,6 +31,10 @@
   <PackageReference Include="System.Data.SqlClient" Version="4.9.0" />
  </ItemGroup>
 
+ <ItemGroup>
+   <Folder Include="Properties\PublishProfiles\" />
+ </ItemGroup>
+
  <!--Für Hot Reload-->
  <!--<ItemGroup>
   <Watch Include="..\SamplesRCL\*.csproj" />
