--- a/src/ITVisions.Blazor/ITVisions.Blazor.csproj
+++ b/src/ITVisions.Blazor/ITVisions.Blazor.csproj
@@ -1,68 +1,69 @@
 <Project Sdk="Microsoft.NET.Sdk.Razor">
 
- <!--Hinweis: Hier werden eigene Werte statt Directory.Build.props verwendet, da diese (auch in anderen Projekten verwendete!) Komponente unabhängig versioniert wird!-->
+	<!--Hinweis: Hier werden eigene Werte statt Directory.Build.props verwendet, da diese (auch in anderen Projekten verwendete!) Komponente unabhängig versioniert wird!-->
 
- <!--Runtime-->
- <PropertyGroup>
-  <TargetFrameworks>net8.0;net9.0;net10.0</TargetFrameworks>
- </PropertyGroup>
+	<!--Runtime-->
+	<PropertyGroup>
+		<TargetFrameworks>net8.0;net9.0;net10.0</TargetFrameworks>
+	</PropertyGroup>
 
- <!--Namen-->
- <PropertyGroup>
-  <PackageId>ITVisions.Blazor</PackageId>
-  <RootNamespace>ITVisions.Blazor</RootNamespace>
-  <AssemblyName>ITVisions.Blazor</AssemblyName>
- </PropertyGroup>
+	<!--Namen-->
+	<PropertyGroup>
+		<PackageId>ITVisions.Blazor</PackageId>
+		<RootNamespace>ITVisions.Blazor</RootNamespace>
+		<AssemblyName>ITVisions.Blazor</AssemblyName>
+	</PropertyGroup>
 
- <!--Versionen-->
- <PropertyGroup>
-  <Version>10.0.1.0</Version>
-  <AssemblyVersion>10.0.1.0</AssemblyVersion>
-  <FileVersion>10.0.1.0</FileVersion>
-  <InformationalVersion>10.0.1.0</InformationalVersion>
- </PropertyGroup>
+	<!--Versionen-->
+	<PropertyGroup>
+		<Version>10.0.1.0</Version>
+		<AssemblyVersion>10.0.1.0</AssemblyVersion>
+		<FileVersion>10.0.1.0</FileVersion>
+		<InformationalVersion>10.0.1.0</InformationalVersion>
+	</PropertyGroup>
 
- <!--Autor-->
- <PropertyGroup>
-  <Copyright>Dr. Holger Schwichtenberg, www.IT-Visions.de 2019-2025</Copyright>
-  <Authors>Dr. Holger Schwichtenberg</Authors>
-  <Company>www.IT-Visions.de</Company>
-  <Product>www.IT-Visions-de Blazor Utilities</Product>
-  <!--<PackageIcon>ITVisions.jpg</PackageIcon>-->
-  <Description>
-   Hilfsklassen für Blazor inkl. JavaScript-Datei
-   Startup.cs:  services.AddBlazorUtil(); bzw. AddBlazorUtilForBlazorServer();
-   index.html bzw. App.razor: &lt;script src="/_content/ITVisions.Blazor/BlazorUtil.js"&gt;&lt;/script&gt;
-  </Description>
- </PropertyGroup>
+	<!--Autor-->
+	<PropertyGroup>
+		<Copyright>Copyright © Dr. Holger Schwichtenberg, www.IT-Visions.de, 2007-2026</Copyright>
+  <AssemblyTrademark>www.IT-Visions.de ist als Wortmarke eingetragen (Deutsches Patent- und Markenamt, Urkunde Nr. 306 09 395). Das www.IT-Visions.de-Logo ist als Wort-/Bildmarke eingetragen (Deutsches Patent- und Markenamt, Urkunde Nr. 30 212 040 974). IT-Visions (Markennummer 272835) und www.IT-Visions.de (Markennummer 272831) sind als Wortmarke beim Österreichischen Patentamt eingetragen.</AssemblyTrademark>
+		<Authors>Dr. Holger Schwichtenberg</Authors>
+		<Company>www.IT-Visions.de</Company>
+		<Product>www.IT-Visions-de Blazor Utilities</Product>
+		<!--<PackageIcon>ITVisions.jpg</PackageIcon>-->
+		<Description>
+			Hilfsklassen für Blazor inkl. JavaScript-Datei
+			Startup.cs:  services.AddBlazorUtil(); bzw. AddBlazorUtilForBlazorServer();
+			index.html bzw. App.razor: &lt;script src="/_content/ITVisions.Blazor/BlazorUtil.js"&gt;&lt;/script&gt;
+		</Description>
+	</PropertyGroup>
 
- <!---Package -->
- <PropertyGroup Condition="'$(USERNAME)' == 'HS'">
-  <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-  <PackageOutputPath>H:\DB\NugetHS</PackageOutputPath>
- </PropertyGroup>
+	<!---Package -->
+	<PropertyGroup Condition="'$(USERNAME)' == 'HS'">
+		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+		<PackageOutputPath>H:\DB\NugetHS</PackageOutputPath>
+	</PropertyGroup>
 
 	<!--Weil in VK.Web MapStaticAssets nicht funktioniert wegen dem PDFViewer dort :-( -->
 	<PropertyGroup>
 		<StaticWebAssetFingerprintingEnabled>false</StaticWebAssetFingerprintingEnabled>
 	</PropertyGroup>
 
- <!--Package Readme.md File-->
- <PropertyGroup>
-  <PackageReadmeFile>readme.md</PackageReadmeFile>
- </PropertyGroup>
- <ItemGroup>
-  <None Include="readme.md" Pack="true" PackagePath="\" />
- </ItemGroup>
+	<!--Package Readme.md File-->
+	<PropertyGroup>
+		<PackageReadmeFile>readme.md</PackageReadmeFile>
+	</PropertyGroup>
+	<ItemGroup>
+		<None Include="readme.md" Pack="true" PackagePath="\" />
+	</ItemGroup>
 
- <!--NuGets-->
- <ItemGroup>
-  <PackageReference Include="Blazored.LocalStorage" Version="4.5.0" />
-  <PackageReference Include="Blazored.SessionStorage" Version="2.4.*" />
-  <PackageReference Include="ITVisions.Util" Version="10.*" />
-  <PackageReference Include="UAParser" Version="3.1.*" />
-  <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.3.0" />
- </ItemGroup>
+	<!--NuGets-->
+	<ItemGroup>
+		<PackageReference Include="Blazored.LocalStorage" Version="4.5.0" />
+		<PackageReference Include="Blazored.SessionStorage" Version="2.4.*" />
+		<PackageReference Include="ITVisions.Util" Version="10.*" />
+		<PackageReference Include="UAParser" Version="3.1.*" />
+		<PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.3.0" />
+	</ItemGroup>
 
 	<ItemGroup Condition="'$(TargetFramework)' == 'net10.0'">
 		<PackageReference Include="Microsoft.AspNetCore.Components" Version="10.*-*" />
@@ -74,54 +75,54 @@
 		<PackageReference Include="Microsoft.JSInterop" Version="10.*-*" />
 	</ItemGroup>
 
- <ItemGroup Condition="'$(TargetFramework)' == 'net9.0'">
-  <PackageReference Include="Microsoft.AspNetCore.Components" Version="9.*" />
-  <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="9.*" />
-  <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.*" />
-  <PackageReference Include="Microsoft.Extensions.Configuration" Version="9.*" />
-  <PackageReference Include="Microsoft.Extensions.Logging.Configuration" Version="9.*" />
-  <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="9.*" />
-  <PackageReference Include="Microsoft.JSInterop" Version="9.*" />
- </ItemGroup>
- 
- <ItemGroup Condition="'$(TargetFramework)' == 'net8.0'">
-  <PackageReference Include="Microsoft.AspNetCore.Components" Version="8.*" />
-  <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="8.*" />
-  <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.*" />
-  <PackageReference Include="Microsoft.Extensions.Configuration" Version="8.*" />
-  <PackageReference Include="Microsoft.Extensions.Logging.Configuration" Version="8.*" />
-  <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="8.*" />
-  <PackageReference Include="Microsoft.JSInterop" Version="8.*" />
- </ItemGroup>
+	<ItemGroup Condition="'$(TargetFramework)' == 'net9.0'">
+		<PackageReference Include="Microsoft.AspNetCore.Components" Version="9.*" />
+		<PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="9.*" />
+		<PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.*" />
+		<PackageReference Include="Microsoft.Extensions.Configuration" Version="9.*" />
+		<PackageReference Include="Microsoft.Extensions.Logging.Configuration" Version="9.*" />
+		<PackageReference Include="Microsoft.Extensions.Logging.Console" Version="9.*" />
+		<PackageReference Include="Microsoft.JSInterop" Version="9.*" />
+	</ItemGroup>
+	
+	<ItemGroup Condition="'$(TargetFramework)' == 'net8.0'">
+		<PackageReference Include="Microsoft.AspNetCore.Components" Version="8.*" />
+		<PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="8.*" />
+		<PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.*" />
+		<PackageReference Include="Microsoft.Extensions.Configuration" Version="8.*" />
+		<PackageReference Include="Microsoft.Extensions.Logging.Configuration" Version="8.*" />
+		<PackageReference Include="Microsoft.Extensions.Logging.Console" Version="8.*" />
+		<PackageReference Include="Microsoft.JSInterop" Version="8.*" />
+	</ItemGroup>
 
- <!--Dateien-->
- <ItemGroup>
-  <None Remove="ITVisions.jpg" />
-  <None Remove="www.IT-Visions.de_Logo.png" />
- </ItemGroup>
- <ItemGroup>
-  <Content Include="Controls\ConfirmDialog.razor.js" />
-  <Content Include="readme.md" />
- </ItemGroup>
- <ItemGroup>
-  <Resource Include="ITVisions.jpg" />
- </ItemGroup>
- <ItemGroup>
-  <Content Update="wwwroot\css\bootstrap\bootstrap.min.css">
-   <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
-   <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
-  </Content>
-  <Content Update="wwwroot\css\bootstrap\bootstrap.min.css.map">
-   <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
-   <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
-  </Content>
-  <Content Update="wwwroot\img\ITVisions.jpg">
-   <Pack>True</Pack>
-   <PackagePath></PackagePath>
-  </Content>
-  <Content Update="wwwroot\img\www.IT-Visions.de_Logo.png">
-   <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-  </Content>
- </ItemGroup>
+	<!--Dateien-->
+	<ItemGroup>
+		<None Remove="ITVisions.jpg" />
+		<None Remove="www.IT-Visions.de_Logo.png" />
+	</ItemGroup>
+	<ItemGroup>
+		<Content Include="Controls\ConfirmDialog.razor.js" />
+		<Content Include="readme.md" />
+	</ItemGroup>
+	<ItemGroup>
+		<Resource Include="ITVisions.jpg" />
+	</ItemGroup>
+	<ItemGroup>
+		<Content Update="wwwroot\css\bootstrap\bootstrap.min.css">
+			<ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+			<CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+		</Content>
+		<Content Update="wwwroot\css\bootstrap\bootstrap.min.css.map">
+			<ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+			<CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+		</Content>
+		<Content Update="wwwroot\img\ITVisions.jpg">
+			<Pack>True</Pack>
+			<PackagePath></PackagePath>
+		</Content>
+		<Content Update="wwwroot\img\www.IT-Visions.de_Logo.png">
+			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		</Content>
+	</ItemGroup>
 
 </Project>
